force-app/main/default/objects/User/fields/Litmos__Completed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Completed_Percentage__c</fullName>
    <inlineHelpText>Total number of courses completed divided by the total number of courses assigned</inlineHelpText>
    <label>Overall Course Completion Percentage</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>