force-app/main/default/objects/User/fields/Litmos__demofield__c.field-meta.xml
<CustomField>
    <fullName>Litmos__demofield__c</fullName>
    <label>demofield</label>
    <length>15</length>
    <type>Text</type>
</CustomField>