force-app/main/default/objects/User/fields/Litmos__Learning_Paths_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Learning_Paths_Assigned__c</fullName>
    <label>Learning Paths Assigned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>