force-app/main/default/objects/User/fields/Litmos__Litmos_Login_Access__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Litmos_Login_Access__c</fullName>
    <defaultValue>&quot;InActive&quot;</defaultValue>
    <inlineHelpText>This field is updated by Litmos, and indicates if the person can log into Litmos.</inlineHelpText>
    <label>Litmos Login Access</label>
    <length>100</length>
    <type>Text</type>
</CustomField>