force-app/main/default/objects/User/fields/Litmos__LitmosUserId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LitmosUserId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <inlineHelpText>Once this field is updated by Litmos, it means this person is synced to Litmos and the Litmos UserId for this individual will display.</inlineHelpText>
    <label>Litmos UserId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>