force-app/main/default/objects/User/fields/Litmos__p_Completed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Litmos__p_Completed_Percentage__c</fullName>
    <formula>if(AND(Litmos__Total_User_Program_Results__c!=0 ,Litmos__Total_User_Program_Results__c!=null),Litmos__Total_Sum_Percentages__c  /  Litmos__Total_User_Program_Results__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>p_Completed Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>