force-app/main/default/objects/User/fields/Litmos__Sync_Litmos__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Sync_Litmos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once this field is checked, the person will be synced to Litmos. Use this field to provision the person into Litmos as a new user, or match this person to an existing Litmos user.</inlineHelpText>
    <label>Sync Litmos</label>
    <type>Checkbox</type>
</CustomField>