force-app/main/default/objects/User/fields/Litmos__Team_Id__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Team_Id__c</fullName>
    <label>Team Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>