force-app/main/default/objects/User/fields/Litmos__Testing123__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Testing123__c</fullName>
    <description>Making sure this works for the new mapping page.</description>
    <label>Testing123</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>