force-app/main/default/objects/User/fields/Litmos__Total_User_Program_Results__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Total_User_Program_Results__c</fullName>
    <label>Total User Program Results</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>