force-app/main/default/objects/User/fields/Litmos__usercustomfield1__c.field-meta.xml
<CustomField>
    <fullName>Litmos__usercustomfield1__c</fullName>
    <label>usercustomfield1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>