force-app/main/default/objects/User/fields/Litmos__usercustomfield2__c.field-meta.xml
<CustomField>
    <fullName>Litmos__usercustomfield2__c</fullName>
    <label>usercustomfield2</label>
    <length>18</length>
    <type>Text</type>
</CustomField>