force-app/main/default/objects/User/fields/maps__AllowMapsExports__c.field-meta.xml
<CustomField>
    <fullName>maps__AllowMapsExports__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Maps Exports</label>
    <type>Checkbox</type>
</CustomField>