force-app/main/default/objects/User/fields/maps__DefaultLatitude__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultLatitude__c</fullName>
    <label>Maps Default Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>