force-app/main/default/objects/User/fields/maps__DefaultLongitude__c.field-meta.xml
<CustomField>
    <fullName>maps__DefaultLongitude__c</fullName>
    <label>Maps Default Longitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>