force-app/main/default/objects/User/fields/maps__DeviceVendor__c.field-meta.xml
<CustomField>
    <fullName>maps__DeviceVendor__c</fullName>
    <formula>&quot;MapAnything&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Device Vendor</label>
    <type>Text</type>
</CustomField>