force-app/main/default/objects/User/fields/maps__EditMapsOrgWideQueries__c.field-meta.xml
<CustomField>
    <fullName>maps__EditMapsOrgWideQueries__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Edit Maps Org Wide Queries</label>
    <type>Checkbox</type>
</CustomField>