force-app/main/default/objects/User/fields/maps__FinishedAdvRouteSetup__c.field-meta.xml
<CustomField>
    <fullName>maps__FinishedAdvRouteSetup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finished Maps Advanced Route Setup</label>
    <type>Checkbox</type>
</CustomField>