force-app/main/default/objects/User/fields/maps__MapsSetting__c.field-meta.xml
<CustomField>
    <fullName>maps__MapsSetting__c</fullName>
    <label>Map Settings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>