force-app/main/default/objects/User/fields/maps__MaxExportSize__c.field-meta.xml
<CustomField>
    <fullName>maps__MaxExportSize__c</fullName>
    <label>Maps Max Export Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>