force-app/main/default/objects/User/fields/maps__PreferredTypeOfMeasurement__c.field-meta.xml
<CustomField>
    <fullName>maps__PreferredTypeOfMeasurement__c</fullName>
    <label>Preferred Type of Measurement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Miles</fullName>
            </value>
            <value>
                <fullName>Km</fullName>
            </value>
            <value>
                <fullName>Meters</fullName>
            </value>
            <value>
                <fullName>Yards</fullName>
            </value>
            <value>
                <fullName>Feet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>