force-app/main/default/objects/User/fields/maps__TPApprover__c.field-meta.xml
<CustomField>
    <fullName>maps__TPApprover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Planning Approver</label>
    <type>Checkbox</type>
</CustomField>