force-app/main/default/objects/User/fields/maps__TPPublisher__c.field-meta.xml
<CustomField>
    <fullName>maps__TPPublisher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Territory Planning Publisher</label>
    <type>Checkbox</type>
</CustomField>