force-app/main/default/objects/User/fields/maps__Version__c.field-meta.xml
<CustomField>
    <fullName>maps__Version__c</fullName>
    <label>Maps Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Previous</fullName>
            </value>
            <value>
                <fullName>Current</fullName>
            </value>
            <value>
                <fullName>Beta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>