force-app/main/default/objects/User/fields/Q9__IsElementsUser__c.field-meta.xml
<CustomField>
    <fullName>Q9__IsElementsUser__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that the user has access to Elements.</description>
    <label>Elements User</label>
    <type>Checkbox</type>
</CustomField>