force-app/main/default/objects/User/fields/User_Unique__c.field-meta.xml
<CustomField>
    <fullName>User_Unique__c</fullName>
    <description>Field is used to generate unique user counts on various reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User Unique</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>