force-app/main/default/objects/User/validationRules/Litmos__Litmos_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Litmos__Litmos_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(Litmos__Deactivate_From_Litmos__c = false &amp;&amp; (Litmos__LitmosUserId__c &lt;&gt; Null &amp;&amp; Litmos__LitmosUserId__c &lt;&gt; &apos;ERROR&apos; &amp;&amp; Litmos__Litmos_Activated__c &amp;&amp; Litmos__Sync_Litmos__c))</errorConditionFormula>
    <errorDisplayField>Litmos__Sync_Litmos__c</errorDisplayField>
    <errorMessage>Litmos is already activated for this user</errorMessage>
</ValidationRule>